Made picker help text always display for Default picker, replaced by button bar when an edit is made. Updated picker help text to be the same height as the button bar, meaning the UI will no longer move when the first edit is made. Removed obsolete configs from template text file: we are getting them from the raw config read function.

--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -167,27 +167,16 @@
 
 					<Grid
 						Grid.Row="1"
+						MinHeight="27"
 						Background="{DynamicResource DismissableMessageBrush}"
-						Visibility="{Binding ShowHelpMessage,
+						Visibility="{Binding PickersService.SelectedPicker.Picker.IsDefault,
 						                     Converter={StaticResource VisibilityConverter}}">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition />
-							<ColumnDefinition Width="Auto" />
-						</Grid.ColumnDefinitions>
+
 						<TextBlock
-							Margin="10 0"
+							Margin="10 2"
 							VerticalAlignment="Center"
-							Text="{x:Static res:PickerRes.PickerHelpText}" />
-						<Button
-							Grid.Column="1"
-							Width="35"
-							Height="35"
-							Padding="5"
-							HorizontalAlignment="Right"
-							VerticalAlignment="Top"
-							Command="{Binding DismissMessage}"
-							Content="{x:Static res:CommonRes.DismissMessage}"
-							Style="{StaticResource RemoveButtonStyle}" />
+							Text="{x:Static res:PickerRes.PickerHelpText}"
+							TextWrapping="Wrap" />
 					</Grid>
 
 					<ScrollViewer
