Increased height for the preset dropdown menu.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -622,6 +622,7 @@
 							Command="{Binding OpenEncodingWindow}"
 							Header="{Binding EncodingPresetButtonText}"
 							LargeIcon="/Icons/EncodingSettings.png"
+							MaxDropDownHeight="3000"
 							ToolTip="{x:Static res:MainRes.EncodingSettingsButtonToolTip}">
 							<controls:PresetTreeViewContainer
 								x:Name="presetTreeViewContainer"
