--- a/VidCoder/Controls/InlineWarning.xaml
+++ b/VidCoder/Controls/InlineWarning.xaml
@@ -1,31 +1,31 @@
 ﻿<UserControl
-    x:Class="VidCoder.Controls.InlineWarning"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
-        <Border
-            Background="{DynamicResource InlineWarningBackgroundBrush}"
-            BorderBrush="Gray"
-            BorderThickness="1"
-            CornerRadius="4"
-            Padding="3">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Image
-                    Grid.Column="0"
-                    Height="18"
-                    Source="/Icons/warning.png" />
-                <TextBlock
-                    Name="warningText"
-                    Grid.Column="1"
-                    Margin="4 0 4 0"
-                    VerticalAlignment="Center"
-                    FontSize="14"
-                    TextWrapping="Wrap" />
-            </Grid>
-        </Border>
-    </Grid>
+	x:Class="VidCoder.Controls.InlineWarning"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<Grid>
+		<Border
+			Padding="3"
+			Background="{DynamicResource InlineWarningBackgroundBrush}"
+			BorderBrush="Gray"
+			BorderThickness="1"
+			CornerRadius="4">
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+				<Image
+					Grid.Column="0"
+					Height="18"
+					Source="/Icons/warning.png" />
+				<TextBlock
+					Name="warningText"
+					Grid.Column="1"
+					Margin="4 0 4 0"
+					VerticalAlignment="Center"
+					FontSize="14"
+					TextWrapping="Wrap" />
+			</Grid>
+		</Border>
+	</Grid>
 </UserControl>
