--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -3,19 +3,24 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:VidCoder"
 	xmlns:localmodel="clr-namespace:VidCoder.Model"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:preview="clr-namespace:VidCoder.View.Preview"
 	xmlns:res="clr-namespace:VidCoder.Resources"
+	xmlns:viewModel="clr-namespace:VidCoder.ViewModel"
 	Title="{Binding Title}"
 	Width="864"
 	Height="514"
 	MinWidth="405"
 	MinHeight="200"
+	d:DataContext="{d:DesignInstance viewModel:PreviewWindowViewModel}"
 	Closing="PreviewWindow_OnClosing"
 	ShowInTaskbar="False"
 	TextOptions.TextFormattingMode="Display"
-	WindowStyle="None">
+	WindowStyle="None"
+	mc:Ignorable="d">
 	<WindowChrome.WindowChrome>
 		<WindowChrome CaptionHeight="30" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
 	</WindowChrome.WindowChrome>
