--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -5,6 +5,7 @@
 	xmlns:VidCoderDragDrop="clr-namespace:VidCoder.DragDropUtils"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:dataModels="clr-namespace:VidCoder.ViewModel.DataModels"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:model="clr-namespace:VidCoder.Model"
 	xmlns:res="clr-namespace:VidCoder.Resources"
@@ -272,20 +273,7 @@
 									Visibility="{Binding UseCustomFileNameFormat,
 									                     Converter={StaticResource VisibilityConverter}}" />
 
-								<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
-									<TextBlock
-										Name="titleCaptializationLabel"
-										VerticalAlignment="Center"
-										Text="{x:Static res:PickerRes.TitleCaptializationLabel}" />
-									<ComboBox
-										MinWidth="100"
-										Margin="6 0 0 0"
-										HorizontalAlignment="Left"
-										AutomationProperties.LabeledBy="{Binding ElementName=titleCaptializationLabel}"
-										ItemsSource="{Binding TitleCaptializationChoices}"
-										SelectedValue="{Binding TitleCapitalization}"
-										SelectedValuePath="Value" />
-								</StackPanel>
+
 
 								<StackPanel Margin="0 10 0 0" Orientation="Horizontal">
 									<TextBlock
@@ -315,6 +303,74 @@
 										ItemsSource="{Binding WhenFileExistsBatchChoices}"
 										SelectedValue="{Binding WhenFileExistsBatch}"
 										SelectedValuePath="Value" />
+								</StackPanel>
+							</StackPanel>
+
+							<!--  Source name  -->
+							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.SourceNameCleanupSection}" />
+							<StackPanel Style="{StaticResource ConfigSectionStack}">
+								<StackPanel Orientation="Horizontal">
+									<CheckBox
+										VerticalAlignment="Center"
+										Content="{x:Static res:PickerRes.ChangeWordSeparatorLabel}"
+										IsChecked="{Binding ChangeWordSeparator}" />
+									<ComboBox
+										Margin="6 0 0 0"
+										DisplayMemberPath="Display"
+										ItemsSource="{Binding WordSeparatorChoices}"
+										SelectedValue="{Binding WordSeparator}"
+										SelectedValuePath="Value"
+										Visibility="{Binding ChangeWordSeparator,
+										                     Converter={StaticResource VisibilityConverter}}" />
+								</StackPanel>
+								<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
+									<CheckBox
+										VerticalAlignment="Center"
+										Content="{x:Static res:PickerRes.ChangeCaptializationLabel}"
+										IsChecked="{Binding ChangeTitleCaptialization}" />
+									<ComboBox
+										MinWidth="100"
+										Margin="6 0 0 0"
+										HorizontalAlignment="Left"
+										ItemsSource="{Binding TitleCaptializationChoices}"
+										SelectedValue="{Binding TitleCapitalization}"
+										SelectedValuePath="Value"
+										Visibility="{Binding ChangeTitleCaptialization,
+										                     Converter={StaticResource VisibilityConverter}}" />
+								</StackPanel>
+								<CheckBox
+									Margin="20 4 0 0"
+									Content="{x:Static res:PickerRes.OnlyChangeCapitalizationIfAllSameLabel}"
+									IsChecked="{Binding OnlyChangeTitleCapitalizationWhenAllSame}"
+									Visibility="{Binding ChangeTitleCaptialization,
+									                     Converter={StaticResource VisibilityConverter}}" />
+								<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
+									<TextBlock VerticalAlignment="Center" Text="{x:Static res:PickerRes.WordBreakCharactersLabel}" />
+									<ItemsControl ItemsSource="{Binding WordBreakCharacterChoices}">
+										<ItemsControl.ItemTemplate>
+											<DataTemplate DataType="dataModels:WordBreakCharacterChoice">
+												<CheckBox
+													Margin="8 0 0 0"
+													VerticalAlignment="Center"
+													AutomationProperties.Name="{Binding AutomationName}"
+													Content="{Binding Display}"
+													IsChecked="{Binding IsSelected}" />
+											</DataTemplate>
+										</ItemsControl.ItemTemplate>
+										<ItemsControl.ItemsPanel>
+											<ItemsPanelTemplate>
+												<StackPanel Orientation="Horizontal" />
+											</ItemsPanelTemplate>
+										</ItemsControl.ItemsPanel>
+									</ItemsControl>
+								</StackPanel>
+								<StackPanel
+									Margin="0 6 0 0"
+									Orientation="Horizontal"
+									Visibility="{Binding MainViewModel.HasVideoSource,
+									                     Converter={StaticResource VisibilityConverter}}">
+									<TextBlock Text="{x:Static res:PickerRes.SourceCleanupPreviewLabel}" />
+									<TextBlock Margin="6 0 0 0" Text="{Binding SourceNameCleanupPreview}" />
 								</StackPanel>
 							</StackPanel>
 
