When an encoding preset is chosen in the Picker, we now display a dialog message when the user tries to change the encoding preset elsewhere and it is blocked. Fixed dark mode styling for the preset combo box in the Picker window.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -636,11 +636,7 @@
 							LargeIcon="/Icons/EncodingSettings.png"
 							MaxDropDownHeight="3000"
 							ToolTip="{x:Static res:MainRes.EncodingSettingsButtonToolTip}">
-							<controls:PresetTreeViewContainer
-								x:Name="presetTreeViewContainer"
-								MinWidth="250"
-								IsEnabled="{Binding PickersService.SelectedPicker.Picker.UseEncodingPreset,
-								                    Converter={StaticResource InverseBoolConverter}}" />
+							<controls:PresetTreeViewContainer x:Name="presetTreeViewContainer" MinWidth="250" />
 						</fluent:SplitButton>
 						<fluent:SplitButton
 							x:Name="pickerButton"
